--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formação</title>
+    <title id="edu-head-title"></title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
@@ -11,10 +11,10 @@
     <header class="cabecalho">
         
         <nav class="cabecalho__menu -desktop">
-            <a class="cabecalho__menu__link" id="dl1" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" id="dl2" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" id="dl3" href="experience.html">Experiência</a>
-            <a class="cabecalho__menu__link" id="dl4" href="education.html">Formação</a>
+            <a class="cabecalho__menu__link" id="dl1" href="index.html"></a>
+            <a class="cabecalho__menu__link" id="dl2" href="about.html"></a>
+            <a class="cabecalho__menu__link" id="dl3" href="experience.html"></a>
+            <a class="cabecalho__menu__link" id="dl4" href="education.html"></a>
         </nav>
 
         <div class="cabecalho__menu -mobile">
@@ -24,10 +24,10 @@
                 <span class="bar bar3"></span>
             </button>
             <nav class="cabecalho__menu__mobile-links">
-                <a class="cabecalho__menu__link" id="ml1" href="index.html">Home</a>
-                <a class="cabecalho__menu__link" id="ml2" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" id="ml3" href="experience.html">Experiência</a>
-                <a class="cabecalho__menu__link" id="ml4" href="education.html">Formação</a>
+                <a class="cabecalho__menu__link" id="ml1" href="index.html"></a>
+                <a class="cabecalho__menu__link" id="ml2" href="about.html"></a>
+                <a class="cabecalho__menu__link" id="ml3" href="experience.html"></a>
+                <a class="cabecalho__menu__link" id="ml4" href="education.html"></a>
             </nav>
         </div>
     </header>
@@ -38,80 +38,40 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
 
-            <h1 id="edu-academic" class="apresentacao__conteudo__titulo">Formação acadêmica</h1>
+            <h1 id="edu-academic" class="apresentacao__conteudo__titulo"></h1>
 
-                <ul id="edu-academic-info" class="apresentacao__conteudo__paragrafo -pequeno">
-                    <li>Bacharel em Sistemas de Informação
-                        <br/>
-                        <span class="cor-destaque">Instituição:</span> <span class="emissor">Universidade Federal Rural da Amazônia</span>
-                        <br/>
-                        Concluído em 2023
-                    </li>
-                </ul>
+                <ul id="edu-academic-info" class="apresentacao__conteudo__paragrafo -pequeno"></ul>
 
             <h1 id="edu-certificates" class="apresentacao__conteudo__titulo">Certificados</h1>
 
                 <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
-                    <li id="edu-certificate-9">React: escrevendo com Typescript
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/9016327f-639c-437e-8d32-7a97e2f10817?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-9"></li>
                     <br/>
-                    <li id="edu-certificate-8">JavaScript para Web: Crie páginas dinâmicas
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/c9fbbc9c-126d-48c8-9f1a-ae61cdcb5991?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-8"></li>
                     <br/>
-                    <li id="edu-certificate-7">JavaScript: programando na linguagem da web
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/94070f19-e016-47b8-a3fb-3024d2c39be0?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-7"></li>
                     <br/>
-                    <li id="edu-certificate-6">HTML e CSS: responsividade com mobile-first
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/968f48ff-3304-4c37-bfc5-c15d66753287?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-6"></li>
                     <br/>
-                    <li id="edu-certificate-5">HTML e CSS: trabalhando com responsividade e publicação de projetos
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/5a30a6e6-a1b6-41ed-b7bb-0309964f788e?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-5"></li>
                     <br/>
-                    <li id="edu-certificate-4">HTML e CSS: cabeçalho, footer e variáveis CSS
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-4"></li>
                     <br/>
-                    <li id="edu-certificate-3">
-                        HTML e CSS: Classes, posicionamento e Flexbox
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-3"></li>
                     <br/>
-                    <li id="edu-certificate-2">HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags
-                        <br/>
-                        <a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
-                    </li>
+                    <li id="edu-certificate-2"></li>
                     <br/>
-                    <li id="edu-certificate-1">Google Workspace: Deployment Services Specialist
-                        <br/>
-                        <a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> <span class="emissor">| Emissor: Google</span>
-                    </li>
+                    <li id="edu-certificate-1"></li>
                 </ul>
 
-            <h1 id="edu-language" class="apresentacao__conteudo__titulo">Idiomas</h1>
-            <ul id="edu-language-content" class="apresentacao__conteudo__paragrafo -pequeno">
-                <li>
-                    Inglês avançado
-                </li>
-            </ul>
+            <h1 id="edu-language" class="apresentacao__conteudo__titulo"></h1>
+            <ul id="edu-language-content" class="apresentacao__conteudo__paragrafo -pequeno"></ul>
 
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
-    <footer class="rodape">
-        <p>There is nothing permanent except change</p>
-    </footer>
+
+    <footer class="rodape"></footer>
 
     <script src="main.js"></script>
 </body>
