--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <header class="cabecalho">
-        
+    <header class="cabecalho">      
         <nav class="cabecalho__menu -desktop">
-            <a class="cabecalho__menu__link" id="dl1" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" id="dl2" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" id="dl3" href="experience.html">Experiência</a>
-            <a class="cabecalho__menu__link" id="dl4" href="education.html">Formação</a>
+            <a class="cabecalho__menu__link" id="dl1" href="index.html"></a>
+            <a class="cabecalho__menu__link" id="dl2" href="about.html"></a>
+            <a class="cabecalho__menu__link" id="dl3" href="experience.html"></a>
+            <a class="cabecalho__menu__link" id="dl4" href="education.html"></a>
         </nav>
 
         <div class="cabecalho__menu -mobile">
@@ -24,23 +23,25 @@
                 <span class="bar bar3"></span>
             </button>
             <nav class="cabecalho__menu__mobile-links">
-                <a class="cabecalho__menu__link" id="ml1" href="index.html">Home</a>
-                <a class="cabecalho__menu__link" id="ml2" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" id="ml3" href="experience.html">Experiência</a>
-                <a class="cabecalho__menu__link" id="ml4" href="education.html">Formação</a>
+                <a class="cabecalho__menu__link" id="ml1" href="index.html"></a>
+                <a class="cabecalho__menu__link" id="ml2" href="about.html"></a>
+                <a class="cabecalho__menu__link" id="ml3" href="experience.html"></a>
+                <a class="cabecalho__menu__link" id="ml4" href="education.html"></a>
             </nav>
         </div>
     </header>
+
     <div class="botoes_idioma">
         <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
         <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
     </div>
+
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 id="home-title" class="apresentacao__conteudo__titulo -center">Desenvolvedor <strong class="breakline" class="cor-destaque">Front-end</strong></h1>
-            <p id="home-content" class="apresentacao__conteudo__paragrafo -center">Olá! Sou o Gabriel Raiol, atualmente estou me especializando em desenvolvimento front-end, construindo projetos em <span class="cor-destaque">React com TypeScript</span>.</p>
+            <h1 id="home-title" class="apresentacao__conteudo__titulo -center"></h1>
+            <p id="home-content" class="apresentacao__conteudo__paragrafo -center"></p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <h2 class="apresentacao__links__subtitulo"></h2>
                 <a class="apresentacao__links__botoes" href="https://github.com/gabrielraiol" target="_blank">
                     <img src="assets/github.png">
                     GitHub
@@ -57,9 +58,8 @@
         </section>
         <img class="apresentacao__imagem" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
-    <footer class="rodape">
-        <p>There is nothing permanent except change</p>
-    </footer>
+    
+    <footer class="rodape"></footer>
 
     <script src="main.js"></script>
 </body>
