adding cursor: pointer to translation buttons and role="button"

--- a/experience.html
+++ b/experience.html
@@ -31,10 +31,12 @@
             </nav>
         </div>
     </header>
+
     <div class="botoes_idioma">
-        <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
-        <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
+        <button role="button" class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
+        <button role="button" class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
     </div>
+    
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             
