--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
 
     <div class="botoes_idioma">
-        <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
-        <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
+        <button role="button" class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
+        <button role="button" class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
     </div>
 
     <main class="apresentacao">
@@ -58,7 +58,7 @@
         </section>
         <img class="apresentacao__imagem" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
-    
+
     <footer class="rodape"></footer>
 
     <script src="main.js"></script>
