removing the onclick function from html and adding to JS file to separate responsabilities

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </nav>
 
         <div class="cabecalho__menu -mobile">
-            <button class="cabecalho__menu-button" onclick="toggleMobileMenu()">
+            <button class="cabecalho__menu-button">
                 <span class="bar bar1"></span>
                 <span class="bar bar2"></span>
                 <span class="bar bar3"></span>
