changing assets to svg; updated readme

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo"></h2>
                 <a class="apresentacao__links__botoes" href="https://github.com/gabrielraiol" target="_blank">
-                    <img src="assets/github.png">
+                    <img src="assets/github.svg">
                     GitHub
                 </a>
                 <a class="apresentacao__links__botoes" href="https://www.linkedin.com/in/gabrielraiol" target="_blank">
-                    <img src="assets/linkedin.png">
+                    <img src="assets/linkedin.svg">
                     LinkedIn
                 </a>
                 <a class="apresentacao__links__botoes" href="https://www.instagram.com/_gabrielraiol" target="_blank">
-                    <img src="assets/instagram.png">
+                    <img src="assets/instagram.svg">
                     Instagram
                 </a>
             </div>
