adding react certificate

--- a/education.html
+++ b/education.html
@@ -44,9 +44,11 @@
 
                 <ul id="edu-academic-info" class="apresentacao__conteudo__paragrafo -pequeno"></ul>
 
-            <h1 id="edu-certificates" class="apresentacao__conteudo__titulo">Certificados</h1>
+            <h1 id="edu-certificates" class="apresentacao__conteudo__titulo"></h1>
 
                 <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
+                    <li id="edu-certificate-10"></li>
+                    <br/>
                     <li id="edu-certificate-9"></li>
                     <br/>
                     <li id="edu-certificate-8"></li>
