restructuring professional experiences to be more readable

--- a/experience.html
+++ b/experience.html
@@ -43,7 +43,7 @@
             <h1 id="experience-title" class="apresentacao__conteudo__titulo"></h1>
             <div class="apresentacao__conteudo__experiencia">
                 <h2 id="experience-role-3"></h2>
-                <h3>Órbita Tecnologia</h3>
+                <h3 id="experience-company-3"></h3>
                 <h3 id="experience-date-3"></h3>
             </div>
             <p id="experience-content-3" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
@@ -51,7 +51,7 @@
 
             <div class="apresentacao__conteudo__experiencia">
                 <h2 id="experience-role-2"></h2>
-                <h3>RR Refrigeração</h3>
+                <h3 id="experience-company-2"></h3>
                 <h3 id="experience-date-2"></h3>
             </div>
             <p id="experience-content-2" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
@@ -59,11 +59,19 @@
 
             <div class="apresentacao__conteudo__experiencia">
                 <h2 id="experience-role-1"></h2>
-                <h3>CRECI 12ª Região PA/AP</h3>
+                <h3 id="experience-company-1"></h3>
                 <h3 id="experience-date-1"></h3>
             </div>
             <p id="experience-content-1" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
             <p id="experience-skills-1" class="apresentacao__conteudo__paragrafo -pequeno"></p>
+
+            <div class="apresentacao__conteudo__experiencia">
+                <h2 id="experience-role-0"></h2>
+                <h3 id="experience-company-0"></h3>
+                <h3 id="experience-date-0"></h3>
+            </div>
+            <p id="experience-content-0" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
+            <p id="experience-skills-0" class="apresentacao__conteudo__paragrafo -pequeno"></p>
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
