changing <p> to <ul> on 'experience' to gain bullet icon by inserting <li> via json

--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
                 <h3 id="experience-company-3"></h3>
                 <h3 id="experience-date-3"></h3>
             </div>
-            <p id="experience-content-3" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
+            <ul id="experience-content-3" class="apresentacao__conteudo__paragrafo -pequeno -initial"></ul>
             <p id="experience-skills-3" class="apresentacao__conteudo__paragrafo -pequeno"></p>
 
             <div class="apresentacao__conteudo__experiencia">
@@ -54,7 +54,7 @@
                 <h3 id="experience-company-2"></h3>
                 <h3 id="experience-date-2"></h3>
             </div>
-            <p id="experience-content-2" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
+            <ul id="experience-content-2" class="apresentacao__conteudo__paragrafo -pequeno -initial"></ul>
             <p id="experience-skills-2" class="apresentacao__conteudo__paragrafo -pequeno"></p>
 
             <div class="apresentacao__conteudo__experiencia">
@@ -62,7 +62,7 @@
                 <h3 id="experience-company-1"></h3>
                 <h3 id="experience-date-1"></h3>
             </div>
-            <p id="experience-content-1" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
+            <ul id="experience-content-1" class="apresentacao__conteudo__paragrafo -pequeno -initial"></ul>
             <p id="experience-skills-1" class="apresentacao__conteudo__paragrafo -pequeno"></p>
 
             <div class="apresentacao__conteudo__experiencia">
@@ -70,7 +70,7 @@
                 <h3 id="experience-company-0"></h3>
                 <h3 id="experience-date-0"></h3>
             </div>
-            <p id="experience-content-0" class="apresentacao__conteudo__paragrafo -pequeno -initial"></p>
+            <ul id="experience-content-0" class="apresentacao__conteudo__paragrafo -pequeno -initial"></ul>
             <p id="experience-skills-0" class="apresentacao__conteudo__paragrafo -pequeno"></p>
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
